--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
-    "mysql2": "^3.9.7",
+    "mysql2": "^3.9.8",
     "passport": "^0.7.0",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "passport-oauth2": "^1.8.0",
     "sequelize": "^6.37.3"
   }
 }
